--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ h3 { text-align: center; font-family: 'Times New Roman', serif; font-size: 22px;
   <ul>
     <li><strong>Income Mean</strong>: Average monthly household income.</li>
     <li><strong>Income Median</strong>: Middle value of household income; usually lower than the mean because of income inequality.</li>
-    <li><strong>Poverty Absolute</strong>: Percentage of households earning below the Poverty Line Income (PLI).</li>
-    <li><strong>Poverty Hardcore</strong>: Percentage of households earning below the Food Poverty Line Income (Food PLI).</li>
-    <li><strong>Poverty Relative</strong>: Percentage of households earning below half of their state’s median income.</li>
+    <li><strong>Absolute Poverty</strong>: Percentage of households earning below the Poverty Line Income (PLI).</li>
+    <li><strong>Hardcore Poverty</strong>: Percentage of households earning below the Food Poverty Line Income (Food PLI).</li>
+    <li><strong>Relative Poverty</strong>: Percentage of households earning below half of their state’s median income.</li>
   </ul>
 </div>
 
