Update footer link text for clarity

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ h3 { text-align: center; font-family: 'Times New Roman', serif; font-size: 22px;
   <p><strong>Author:</strong> Rachelle Yap Zen Yi</p>
   <p><strong>Date:</strong> 19th October 2025</p>
   <p><strong>Data Sources:</strong>
-    <a href="https://data.gov.my/data-catalogue/hh_income_state" target="_blank" rel="noopener noreferrer">Income by State</a>
+    <a href="https://data.gov.my/data-catalogue/hh_income_state" target="_blank" rel="noopener noreferrer">Household Income by State</a>
     &nbsp;|&nbsp;
     <a href="https://open.dosm.gov.my/data-catalogue/hh_poverty_state" target="_blank" rel="noopener noreferrer">Poverty by State</a>
   </p>
